input-chrono: fix z-index warning

--- a/client/components/input-chrono/style.scss
+++ b/client/components/input-chrono/style.scss
@@ -4,7 +4,7 @@
 
 	.gridicons-calendar {
 		color: lighten( $gray, 20% );
-		z-index: z-index( '.popover', '.input-chrono__container .gridicons-calendar' );
+		z-index: z-index( '.popover__container', '.input-chrono__container .gridicons-calendar' );
 		font-size: 8px;
 		width: 20px;
 		position: absolute;
@@ -26,7 +26,7 @@ input.input-chrono {
 	font-size: 12px;
 	text-align: left;
 	position: relative;
-	z-index: z-index( '.popover', 'input.input-chrono' );
+	z-index: z-index( '.popover__container', 'input.input-chrono' );
 }
 
 .text-chrono {
